Improved entity filters.  Added blogs
